데이터 내림차순 정렬

--- a/draw_index.ipynb
+++ b/draw_index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,14 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/qr/d0tz05096cq7wtbf54br3qsw0000gn/T/ipykernel_33375/2797846781.py:3: SettingWithCopyWarning: \n",
+      "/var/folders/qr/d0tz05096cq7wtbf54br3qsw0000gn/T/ipykernel_38056/2797846781.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,14 +52,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/qr/d0tz05096cq7wtbf54br3qsw0000gn/T/ipykernel_33375/1625842433.py:3: SettingWithCopyWarning: \n",
+      "/var/folders/qr/d0tz05096cq7wtbf54br3qsw0000gn/T/ipykernel_38056/1625842433.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,18 +126,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "normalized_df.drop(columns=['온실가스(1인당)', '전력사용량', '공공자전거_이용건수', '급수사용량(1인당)', '쓰레기배출량(1인당)',\n",
-    "       '아황산가스', '이산화질소', '미세먼지', '오존', '공원면적(1인당)'], inplace=True)\n",
+    "       '아황산가스', '이산화질소', '미세먼지', '오존', '공원면적(1인당)'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "normalized_df.sort_values(by='환경생태지수', ascending=False, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "normalized_df.to_csv('./result/seoul_env_index.csv', encoding='utf-8-sig', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -172,39 +189,9 @@
        "      <td>7.622158</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>중구</td>\n",
-       "      <td>1.334174</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>용산구</td>\n",
-       "      <td>0.209415</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>성동구</td>\n",
-       "      <td>1.490077</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>광진구</td>\n",
-       "      <td>2.077959</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>동대문구</td>\n",
-       "      <td>0.693343</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>중랑구</td>\n",
-       "      <td>1.386455</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>성북구</td>\n",
-       "      <td>1.853011</td>\n",
+       "      <th>10</th>\n",
+       "      <td>노원구</td>\n",
+       "      <td>4.650741</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -212,74 +199,9 @@
        "      <td>4.589529</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>도봉구</td>\n",
-       "      <td>3.136898</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>노원구</td>\n",
-       "      <td>4.650741</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>은평구</td>\n",
-       "      <td>3.101191</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>서대문구</td>\n",
-       "      <td>1.311663</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>마포구</td>\n",
-       "      <td>2.067828</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>양천구</td>\n",
-       "      <td>2.125156</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>강서구</td>\n",
        "      <td>4.352547</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>구로구</td>\n",
-       "      <td>1.413944</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>금천구</td>\n",
-       "      <td>0.467059</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>영등포구</td>\n",
-       "      <td>3.093023</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>동작구</td>\n",
-       "      <td>0.808911</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>관악구</td>\n",
-       "      <td>2.422918</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>서초구</td>\n",
-       "      <td>3.569892</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>강남구</td>\n",
-       "      <td>0.957914</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
@@ -287,9 +209,104 @@
        "      <td>3.711137</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>서초구</td>\n",
+       "      <td>3.569892</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>도봉구</td>\n",
+       "      <td>3.136898</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>은평구</td>\n",
+       "      <td>3.101191</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>영등포구</td>\n",
+       "      <td>3.093023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>관악구</td>\n",
+       "      <td>2.422918</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>양천구</td>\n",
+       "      <td>2.125156</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>광진구</td>\n",
+       "      <td>2.077959</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>마포구</td>\n",
+       "      <td>2.067828</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>성북구</td>\n",
+       "      <td>1.853011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>24</th>\n",
        "      <td>강동구</td>\n",
        "      <td>1.553057</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>성동구</td>\n",
+       "      <td>1.490077</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>구로구</td>\n",
+       "      <td>1.413944</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>중랑구</td>\n",
+       "      <td>1.386455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>중구</td>\n",
+       "      <td>1.334174</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>서대문구</td>\n",
+       "      <td>1.311663</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>강남구</td>\n",
+       "      <td>0.957914</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>동작구</td>\n",
+       "      <td>0.808911</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>동대문구</td>\n",
+       "      <td>0.693343</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>금천구</td>\n",
+       "      <td>0.467059</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>용산구</td>\n",
+       "      <td>0.209415</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -298,33 +315,33 @@
       "text/plain": [
        "    자치구명    환경생태지수\n",
        "0    종로구  7.622158\n",
-       "1     중구  1.334174\n",
-       "2    용산구  0.209415\n",
-       "3    성동구  1.490077\n",
-       "4    광진구  2.077959\n",
-       "5   동대문구  0.693343\n",
-       "6    중랑구  1.386455\n",
-       "7    성북구  1.853011\n",
-       "8    강북구  4.589529\n",
-       "9    도봉구  3.136898\n",
        "10   노원구  4.650741\n",
-       "11   은평구  3.101191\n",
-       "12  서대문구  1.311663\n",
-       "13   마포구  2.067828\n",
-       "14   양천구  2.125156\n",
+       "8    강북구  4.589529\n",
        "15   강서구  4.352547\n",
-       "16   구로구  1.413944\n",
-       "17   금천구  0.467059\n",
-       "18  영등포구  3.093023\n",
-       "19   동작구  0.808911\n",
-       "20   관악구  2.422918\n",
-       "21   서초구  3.569892\n",
-       "22   강남구  0.957914\n",
        "23   송파구  3.711137\n",
-       "24   강동구  1.553057"
+       "21   서초구  3.569892\n",
+       "9    도봉구  3.136898\n",
+       "11   은평구  3.101191\n",
+       "18  영등포구  3.093023\n",
+       "20   관악구  2.422918\n",
+       "14   양천구  2.125156\n",
+       "4    광진구  2.077959\n",
+       "13   마포구  2.067828\n",
+       "7    성북구  1.853011\n",
+       "24   강동구  1.553057\n",
+       "3    성동구  1.490077\n",
+       "16   구로구  1.413944\n",
+       "6    중랑구  1.386455\n",
+       "1     중구  1.334174\n",
+       "12  서대문구  1.311663\n",
+       "22   강남구  0.957914\n",
+       "19   동작구  0.808911\n",
+       "5   동대문구  0.693343\n",
+       "17   금천구  0.467059\n",
+       "2    용산구  0.209415"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
