정규화 방식 변경

--- a/draw_index.ipynb
+++ b/draw_index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,11 +11,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv('./result/seoul_env_data.csv', encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numeric_columns = df.select_dtypes(include=['int64', 'float64']).columns\n",
+    "numeric_data = df[numeric_columns]\n",
+    "scaler = MinMaxScaler()\n",
+    "normalized_data = scaler.fit_transform(numeric_data)\n",
+    "normalized_df = pd.DataFrame(normalized_data, columns=numeric_columns)\n",
+    "first_column = df.pop('자치구명')\n",
+    "normalized_df.insert(0, '자치구명', first_column)"
    ]
   },
   {
@@ -27,18 +51,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/qr/d0tz05096cq7wtbf54br3qsw0000gn/T/ipykernel_38056/2797846781.py:3: SettingWithCopyWarning: \n",
+      "/var/folders/qr/d0tz05096cq7wtbf54br3qsw0000gn/T/ipykernel_41612/3115806717.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  normalized_df.loc['total'] = normalized_df[columns_to_average].mean()\n"
+      "  normalized_df.loc['total'] = normalized_df[columns_to_average].sum()\n"
      ]
     }
    ],
    "source": [
     "columns_to_average = df.columns.difference(['자치구명'])\n",
     "normalized_df = df[:]\n",
-    "normalized_df.loc['total'] = normalized_df[columns_to_average].mean()"
+    "normalized_df.loc['total'] = normalized_df[columns_to_average].sum()"
    ]
   },
   {
@@ -59,7 +83,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/qr/d0tz05096cq7wtbf54br3qsw0000gn/T/ipykernel_38056/1625842433.py:3: SettingWithCopyWarning: \n",
+      "/var/folders/qr/d0tz05096cq7wtbf54br3qsw0000gn/T/ipykernel_41612/1625842433.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -85,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,39 +118,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
     "normalized_df['환경생태지수'] = (normalized_df['온실가스(1인당)'] + normalized_df['전력사용량'] + normalized_df['급수사용량(1인당)'] + normalized_df['쓰레기배출량(1인당)'] + normalized_df['아황산가스'] + normalized_df['이산화질소'] + normalized_df['미세먼지'] + normalized_df['오존']) * -1/5 \\\n",
-    "    + (normalized_df['공공자전거_이용건수'] + normalized_df['공원면적(1인당)'])*2"
+    "    + (normalized_df['공공자전거_이용건수'] + normalized_df['공원면적(1인당)']) * 8"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['자치구명', '온실가스(1인당)', '전력사용량', '공공자전거_이용건수', '급수사용량(1인당)', '쓰레기배출량(1인당)',\n",
-       "       '아황산가스', '이산화질소', '미세먼지', '오존', '공원면적(1인당)', '환경생태지수'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "normalized_df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,16 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "normalized_df.to_csv('./result/seoul_env_index.csv', encoding='utf-8-sig', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -179,183 +172,126 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>자치구명</th>\n",
-       "      <th>환경생태지수</th>\n",
+       "      <th>온실가스(1인당)</th>\n",
+       "      <th>전력사용량</th>\n",
+       "      <th>공공자전거_이용건수</th>\n",
+       "      <th>급수사용량(1인당)</th>\n",
+       "      <th>쓰레기배출량(1인당)</th>\n",
+       "      <th>아황산가스</th>\n",
+       "      <th>이산화질소</th>\n",
+       "      <th>미세먼지</th>\n",
+       "      <th>오존</th>\n",
+       "      <th>공원면적(1인당)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>종로구</td>\n",
-       "      <td>7.622158</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>노원구</td>\n",
-       "      <td>4.650741</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>강북구</td>\n",
-       "      <td>4.589529</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>강서구</td>\n",
-       "      <td>4.352547</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>송파구</td>\n",
-       "      <td>3.711137</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>서초구</td>\n",
-       "      <td>3.569892</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>도봉구</td>\n",
-       "      <td>3.136898</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>은평구</td>\n",
-       "      <td>3.101191</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>영등포구</td>\n",
-       "      <td>3.093023</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>관악구</td>\n",
-       "      <td>2.422918</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>양천구</td>\n",
-       "      <td>2.125156</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>광진구</td>\n",
-       "      <td>2.077959</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>마포구</td>\n",
-       "      <td>2.067828</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>성북구</td>\n",
-       "      <td>1.853011</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>강동구</td>\n",
-       "      <td>1.553057</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>성동구</td>\n",
-       "      <td>1.490077</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>구로구</td>\n",
-       "      <td>1.413944</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>중랑구</td>\n",
-       "      <td>1.386455</td>\n",
+       "      <td>0.572880</td>\n",
+       "      <td>0.210463</td>\n",
+       "      <td>0.189263</td>\n",
+       "      <td>0.648285</td>\n",
+       "      <td>0.274648</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.285714</td>\n",
+       "      <td>0.857143</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>중구</td>\n",
-       "      <td>1.334174</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>서대문구</td>\n",
-       "      <td>1.311663</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>강남구</td>\n",
-       "      <td>0.957914</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>동작구</td>\n",
-       "      <td>0.808911</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>동대문구</td>\n",
-       "      <td>0.693343</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>금천구</td>\n",
-       "      <td>0.467059</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.359147</td>\n",
+       "      <td>0.080723</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.545775</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.714286</td>\n",
+       "      <td>0.294442</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>용산구</td>\n",
-       "      <td>0.209415</td>\n",
+       "      <td>0.201191</td>\n",
+       "      <td>0.157949</td>\n",
+       "      <td>0.052716</td>\n",
+       "      <td>0.221657</td>\n",
+       "      <td>0.186620</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.428571</td>\n",
+       "      <td>0.714286</td>\n",
+       "      <td>0.056749</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>성동구</td>\n",
+       "      <td>0.232203</td>\n",
+       "      <td>0.341286</td>\n",
+       "      <td>0.253132</td>\n",
+       "      <td>0.153802</td>\n",
+       "      <td>0.077465</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.714286</td>\n",
+       "      <td>0.428571</td>\n",
+       "      <td>0.099915</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>광진구</td>\n",
+       "      <td>0.063040</td>\n",
+       "      <td>0.183668</td>\n",
+       "      <td>0.340846</td>\n",
+       "      <td>0.107305</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.444444</td>\n",
+       "      <td>0.142857</td>\n",
+       "      <td>0.285714</td>\n",
+       "      <td>0.089686</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    자치구명    환경생태지수\n",
-       "0    종로구  7.622158\n",
-       "10   노원구  4.650741\n",
-       "8    강북구  4.589529\n",
-       "15   강서구  4.352547\n",
-       "23   송파구  3.711137\n",
-       "21   서초구  3.569892\n",
-       "9    도봉구  3.136898\n",
-       "11   은평구  3.101191\n",
-       "18  영등포구  3.093023\n",
-       "20   관악구  2.422918\n",
-       "14   양천구  2.125156\n",
-       "4    광진구  2.077959\n",
-       "13   마포구  2.067828\n",
-       "7    성북구  1.853011\n",
-       "24   강동구  1.553057\n",
-       "3    성동구  1.490077\n",
-       "16   구로구  1.413944\n",
-       "6    중랑구  1.386455\n",
-       "1     중구  1.334174\n",
-       "12  서대문구  1.311663\n",
-       "22   강남구  0.957914\n",
-       "19   동작구  0.808911\n",
-       "5   동대문구  0.693343\n",
-       "17   금천구  0.467059\n",
-       "2    용산구  0.209415"
+       "  자치구명  온실가스(1인당)     전력사용량  공공자전거_이용건수  급수사용량(1인당)  쓰레기배출량(1인당)  아황산가스  \\\n",
+       "0  종로구   0.572880  0.210463    0.189263    0.648285     0.274648    1.0   \n",
+       "1   중구   1.000000  0.359147    0.080723    1.000000     0.545775    1.0   \n",
+       "2  용산구   0.201191  0.157949    0.052716    0.221657     0.186620    1.0   \n",
+       "3  성동구   0.232203  0.341286    0.253132    0.153802     0.077465    1.0   \n",
+       "4  광진구   0.063040  0.183668    0.340846    0.107305     0.000000    1.0   \n",
+       "\n",
+       "      이산화질소      미세먼지        오존  공원면적(1인당)  \n",
+       "0  0.666667  0.285714  0.857143   1.000000  \n",
+       "1  1.000000  0.000000  0.714286   0.294442  \n",
+       "2  0.666667  0.428571  0.714286   0.056749  \n",
+       "3  0.666667  0.714286  0.428571   0.099915  \n",
+       "4  0.444444  0.142857  0.285714   0.089686  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "normalized_df"
+    "normalized_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "normalized_df.to_csv('./result/seoul_env_index.csv', encoding='utf-8-sig', index=False)"
+   ]
   }
  ],
  "metadata": {
