지수 산출 방식 변경

--- a/draw_index.ipynb
+++ b/draw_index.ipynb
@@ -57,8 +57,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "normalized_df['환경생태지수'] = (normalized_df['온실가스(1인당)'] + normalized_df['전력사용량'] + normalized_df['급수사용량(1인당)'] + normalized_df['쓰레기배출량(1인당)'] + normalized_df['아황산가스'] + normalized_df['이산화질소'] + normalized_df['미세먼지'] + normalized_df['오존']) * -1/5 \\\n",
-    "    + (normalized_df['공공자전거_이용건수'] + normalized_df['공원면적(1인당)']) * 8"
+    "normalized_df['환경생태지수'] = (normalized_df['온실가스(1인당)'] + normalized_df['전력사용량'] + normalized_df['급수사용량(1인당)'] + normalized_df['쓰레기배출량(1인당)'] + normalized_df['아황산가스'] + normalized_df['이산화질소'] + normalized_df['미세먼지'] + normalized_df['오존']) * -1 \\\n",
+    "    + (normalized_df['공공자전거_이용건수'] + normalized_df['공원면적(1인당)'])"
    ]
   },
   {
@@ -112,29 +112,129 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>종로구</td>\n",
-       "      <td>8.610944</td>\n",
+       "      <th>8</th>\n",
+       "      <td>강북구</td>\n",
+       "      <td>-1.033024</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>강서구</td>\n",
-       "      <td>7.465339</td>\n",
+       "      <th>9</th>\n",
+       "      <td>도봉구</td>\n",
+       "      <td>-1.549100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>송파구</td>\n",
-       "      <td>6.063509</td>\n",
+       "      <th>4</th>\n",
+       "      <td>광진구</td>\n",
+       "      <td>-1.796498</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>은평구</td>\n",
+       "      <td>-1.946255</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>강동구</td>\n",
+       "      <td>-2.083669</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>서대문구</td>\n",
+       "      <td>-2.147681</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>서초구</td>\n",
+       "      <td>-2.214677</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>노원구</td>\n",
-       "      <td>5.922694</td>\n",
+       "      <td>-2.353061</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>양천구</td>\n",
+       "      <td>-2.375762</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>성북구</td>\n",
+       "      <td>-2.691464</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>관악구</td>\n",
+       "      <td>-2.829441</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>마포구</td>\n",
+       "      <td>-2.996642</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>영등포구</td>\n",
-       "      <td>5.099085</td>\n",
+       "      <td>-3.008296</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>구로구</td>\n",
+       "      <td>-3.089039</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>금천구</td>\n",
+       "      <td>-3.113571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>송파구</td>\n",
+       "      <td>-3.128324</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>성동구</td>\n",
+       "      <td>-3.261233</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>동작구</td>\n",
+       "      <td>-3.262515</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>종로구</td>\n",
+       "      <td>-3.326537</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>중랑구</td>\n",
+       "      <td>-3.389462</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>용산구</td>\n",
+       "      <td>-3.467477</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>동대문구</td>\n",
+       "      <td>-3.499434</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>강서구</td>\n",
+       "      <td>-4.060900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>강남구</td>\n",
+       "      <td>-4.600018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>중구</td>\n",
+       "      <td>-5.244042</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -142,11 +242,31 @@
       ],
       "text/plain": [
        "    자치구명    환경생태지수\n",
-       "0    종로구  8.610944\n",
-       "15   강서구  7.465339\n",
-       "23   송파구  6.063509\n",
-       "10   노원구  5.922694\n",
-       "18  영등포구  5.099085"
+       "8    강북구 -1.033024\n",
+       "9    도봉구 -1.549100\n",
+       "4    광진구 -1.796498\n",
+       "11   은평구 -1.946255\n",
+       "24   강동구 -2.083669\n",
+       "12  서대문구 -2.147681\n",
+       "21   서초구 -2.214677\n",
+       "10   노원구 -2.353061\n",
+       "14   양천구 -2.375762\n",
+       "7    성북구 -2.691464\n",
+       "20   관악구 -2.829441\n",
+       "13   마포구 -2.996642\n",
+       "18  영등포구 -3.008296\n",
+       "16   구로구 -3.089039\n",
+       "17   금천구 -3.113571\n",
+       "23   송파구 -3.128324\n",
+       "3    성동구 -3.261233\n",
+       "19   동작구 -3.262515\n",
+       "0    종로구 -3.326537\n",
+       "6    중랑구 -3.389462\n",
+       "2    용산구 -3.467477\n",
+       "5   동대문구 -3.499434\n",
+       "15   강서구 -4.060900\n",
+       "22   강남구 -4.600018\n",
+       "1     중구 -5.244042"
       ]
      },
      "execution_count": 9,
@@ -155,7 +275,7 @@
     }
    ],
    "source": [
-    "normalized_df.head()"
+    "normalized_df"
    ]
   },
   {
